
Orx - Portable Game Engine  (Version 1.0 final)

=============================================================================

orx 1.0 final
-----
* Added fully featured localization module (orxLocale)
* orxTEXT that relies on the orxLocale module will now be automatically updated when changing language at runtime
* Updated screenshot module to work with config reloads
* Optimized some access to the config module
* Added acceleration parameter to FX curves (to controle their frequencies over time)
* Fixed flipped & tiled objects rendering
* Replaced all external uses of orxRGBA by orxCOLOR
* Events handlers are now expected to return orxSTATUS_SUCCESS so as to continue calling other handlers
* Added orxDisplay_SetFullScreen() and orxDisplay_IsFullScreen() functions + SFML implementation
* Improved some tutorials + added localization example in tutorial #10
* Misc minor updates in code & comments

orx 1.0rc1
-----
* Migrated all SFML plugins on all platforms to SFML 1.5: linux was using SFML 1.3, other platforms were using SFML 1.4
* Fixed the reload of config history: logic was broken and it could even crash
* Physics plugin now can handle negative scales (mirror effect)
* Fixed spawner not using scale when setting spawned object's relative speed
* Added orxLOG_CONSOLE(), orxLOG_FILE() and orxLOG_RAW() helpers
* Config section are not allowed anylonger to have leading or trailing spaces + trimmed all requests accordingly
* Fixed spawner wave timestamp not being correctly cleared when a spawner was reset
* Removed obsolete files
* Misc minor updates in comments/doc files

orx 1.0rc0
-----
* Initial release candidate for orx 1.0