@@ -1,5 +1,5 @@
 
-Orx - Portable Game Engine  (Version 1.0)
+Orx - Portable Game Engine  (Version 1.1)
 
 =============================================================================
 
