@@ -3096,6 +3096,22 @@ Here is a list of all functions, variables, defines, enums, and typedefs with li
 : <a class="el" href="group__orx_spawner.html#gff800cd8cb86a34956293b1288f5f24e">orxSpawner.h</a>
 <li>orxSpawner_IsEnabled()
 : <a class="el" href="group__orx_spawner.html#g64d22cba58280cc097133aaaec19ea57">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_AUTO_DELETE
+: <a class="el" href="group__orx_spawner.html#ge85d9762c0af0efefd9371c8bf81f6af">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_AUTO_RESET
+: <a class="el" href="group__orx_spawner.html#g9787936032dc7d434c0011c995c6873b">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_NONE
+: <a class="el" href="group__orx_spawner.html#g7539c41c2c9e9b50e49e9198f65ddaac">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_USE_ALPHA
+: <a class="el" href="group__orx_spawner.html#gacc4ba128377d1617c203696cf724332">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_USE_COLOR
+: <a class="el" href="group__orx_spawner.html#g1a4e8d2ca6a5107c1f0b0aed92d790fc">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_USE_RELATIVE_SPEED
+: <a class="el" href="group__orx_spawner.html#g4e4f5989c0174b711f89f1b154aff283">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_USE_SELF_AS_PARENT
+: <a class="el" href="group__orx_spawner.html#g9dac3f048e3fd9117d296f24f281b88b">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_MASK_USER_ALL
+: <a class="el" href="group__orx_spawner.html#g26db6b62deb1e9d00aa7033ce157c4aa">orxSpawner.h</a>
 <li>orxSpawner_Reset()
 : <a class="el" href="group__orx_spawner.html#g94e4e78d9003e0d5f140230552953c95">orxSpawner.h</a>
 <li>orxSpawner_SetActiveObjectLimit()
@@ -3122,9 +3138,9 @@ Here is a list of all functions, variables, defines, enums, and typedefs with li
 : <a class="el" href="group__orx_spawner.html#ga6fd783070023ab4b65477ded61aac5e">orxSpawner.h</a>
 <li>orxSpawner_Spawn()
 : <a class="el" href="group__orx_spawner.html#gd08003006dc08bcb3f3916a2c234e9af">orxSpawner.h</a>
-<li>orxSTATUS()
-: <a class="el" href="group__orx_module.html#gf44141f0bc45f319187952b4629b862c">orxModule.h</a>
-, <a class="el" href="group__orx_type.html#g18b11c4d0ed79ac2f8542e3bcfac340d">orxType.h</a>
+<li>orxSTATUS
+: <a class="el" href="group__orx_type.html#g18b11c4d0ed79ac2f8542e3bcfac340d">orxType.h</a>
+, <a class="el" href="group__orx_module.html#gf44141f0bc45f319187952b4629b862c">orxModule.h</a>
 <li>orxSTATUS_FAILURE
 : <a class="el" href="group__orx_type.html#gg18b11c4d0ed79ac2f8542e3bcfac340dfae353e8d94bb99a79ae23475ec112b7">orxType.h</a>
 <li>orxSTATUS_NONE
@@ -3534,8 +3550,8 @@ Here is a list of all functions, variables, defines, enums, and typedefs with li
 <li>orxVECTOR_Z
 : <a class="el" href="group__orx_vector.html#gfb49da17b1f47004004b7bdfb803fda1">orxVector.h</a>
 <li>orxVIEWPORT
-: <a class="el" href="group__orx_structure.html#g98094cd0e989a5c13e02e5ac49c5e269">orxStructure.h</a>
-, <a class="el" href="group__orx_viewport.html#g75b5cb6cbb6a2156cf382a50c65ee71a">orxViewport.h</a>
+: <a class="el" href="group__orx_viewport.html#g75b5cb6cbb6a2156cf382a50c65ee71a">orxViewport.h</a>
+, <a class="el" href="group__orx_structure.html#g98094cd0e989a5c13e02e5ac49c5e269">orxStructure.h</a>
 <li>orxViewport_AddShader()
 : <a class="el" href="group__orx_viewport.html#gfae98230b6e33fb16c5827b48db78b4b">orxViewport.h</a>
 <li>orxViewport_Create()
