@@ -473,6 +473,22 @@
 : <a class="el" href="group__orx_sound_system.html#g180120f04cd8b042cdfa0bdff3f3f9d8">orxSoundSystem.h</a>
 <li>orxSPAWNER
 : <a class="el" href="group__orx_structure.html#gae994bc4ff855d207bac0f7b8bc2cf99">orxStructure.h</a>
+<li>orxSPAWNER_KU32_FLAG_AUTO_DELETE
+: <a class="el" href="group__orx_spawner.html#ge85d9762c0af0efefd9371c8bf81f6af">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_AUTO_RESET
+: <a class="el" href="group__orx_spawner.html#g9787936032dc7d434c0011c995c6873b">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_NONE
+: <a class="el" href="group__orx_spawner.html#g7539c41c2c9e9b50e49e9198f65ddaac">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_USE_ALPHA
+: <a class="el" href="group__orx_spawner.html#gacc4ba128377d1617c203696cf724332">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_USE_COLOR
+: <a class="el" href="group__orx_spawner.html#g1a4e8d2ca6a5107c1f0b0aed92d790fc">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_USE_RELATIVE_SPEED
+: <a class="el" href="group__orx_spawner.html#g4e4f5989c0174b711f89f1b154aff283">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_FLAG_USE_SELF_AS_PARENT
+: <a class="el" href="group__orx_spawner.html#g9dac3f048e3fd9117d296f24f281b88b">orxSpawner.h</a>
+<li>orxSPAWNER_KU32_MASK_USER_ALL
+: <a class="el" href="group__orx_spawner.html#g26db6b62deb1e9d00aa7033ce157c4aa">orxSpawner.h</a>
 <li>orxSTRING_KC_VECTOR_END
 : <a class="el" href="group__orx_string.html#gc8646f825bc6df7e387d877970d56e91">orxString.h</a>
 <li>orxSTRING_KC_VECTOR_END_ALT
