@@ -22,6 +22,23 @@
 <code>#include &quot;<a class="el" href="orx_frame_8h.html">object/orxFrame.h</a>&quot;</code><br>
 <table border="0" cellpadding="0" cellspacing="0">
 <tr><td></td></tr>
+<tr><td colspan="2"><br><h2>Defines</h2></td></tr>
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#g7539c41c2c9e9b50e49e9198f65ddaac">orxSPAWNER_KU32_FLAG_NONE</a>&nbsp;&nbsp;&nbsp;0x00000000</td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#ge85d9762c0af0efefd9371c8bf81f6af">orxSPAWNER_KU32_FLAG_AUTO_DELETE</a>&nbsp;&nbsp;&nbsp;0x00000001</td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#g9787936032dc7d434c0011c995c6873b">orxSPAWNER_KU32_FLAG_AUTO_RESET</a>&nbsp;&nbsp;&nbsp;0x00000002</td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#gacc4ba128377d1617c203696cf724332">orxSPAWNER_KU32_FLAG_USE_ALPHA</a>&nbsp;&nbsp;&nbsp;0x00000004</td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#g1a4e8d2ca6a5107c1f0b0aed92d790fc">orxSPAWNER_KU32_FLAG_USE_COLOR</a>&nbsp;&nbsp;&nbsp;0x00000008</td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#g4e4f5989c0174b711f89f1b154aff283">orxSPAWNER_KU32_FLAG_USE_RELATIVE_SPEED</a>&nbsp;&nbsp;&nbsp;0x00000010</td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#g9dac3f048e3fd9117d296f24f281b88b">orxSPAWNER_KU32_FLAG_USE_SELF_AS_PARENT</a>&nbsp;&nbsp;&nbsp;0x00000020</td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#g26db6b62deb1e9d00aa7033ce157c4aa">orxSPAWNER_KU32_MASK_USER_ALL</a>&nbsp;&nbsp;&nbsp;0x000000FF</td></tr>
+
 <tr><td colspan="2"><br><h2>Typedefs</h2></td></tr>
 <tr><td class="memItemLeft" nowrap align="right" valign="top">typedef struct __orxSPAWNER_t&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_spawner.html#g92079497160c92dff118837b22c0ea31">orxSPAWNER</a></td></tr>
 
