@@ -56,7 +56,7 @@ Position        = (-20, 0, 0) ~ (20, 0, 0)
 
 [Spawner]
 Object      = Particle
-WaveSize  = 5
+WaveSize    = 5
 WaveDelay   = 0.01
 
 [ParticleSpawner]
