@@ -9,7 +9,7 @@ ChildList = ParticleSpawner # Mask
 
 [Spawner]
 WaveDelay   = 0.05
-WaveSize  = 5
+WaveSize    = 5
 
 [ParticleSpawner]
 Position  = (0, -100, 0)
