@@ -1,7 +1,18 @@
 
-Orx - Portable Game Engine  (Version 1.0 final)
+Orx - Portable Game Engine  (Version 1.1 rc0)
 
 =============================================================================
+
+orx 1.1 rc0
+-----
+* Added orxCrypt command line tool for merging/encrypting/decrypting config files
+* Added owner to spawner structure + all missing accessors for runtime handling
+* IMPORTANT: Renamed spawner's WaveNumber property to WaveSize
+* Fixed config block value incorrectly saved by orxConfig_Save()
+* Fixed tutorial #5 (viewport) jerkyness
+* Sets default gravity to none in Box2D physics plugin
+* Fixed use of AutoScroll/DepthScale with objects using bodies
+* Changed tutorial #11 (spawner/shader) shader code
 
 orx 1.0 final
 -----
